# Beacon

./: .gitattributes  ARCHITECTURE.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: caddy.rs  commands.rs  compose.rs  docker.rs  files.rs  hardening.rs  lib.rs  monitor.rs  procs.rs  secrets.rs  store.rs  terminal.rs
src-tauri/src/ssh/: client.rs  mod.rs
src/lib/: AppIcon.svelte  AppStore.svelte  Connecting.svelte  Containers.svelte  Dashboard.svelte  Files.svelte  Gauge.svelte  HddImage.svelte  Icon.svelte  Network.svelte  ProcessManager.svelte  Settings.svelte  api.ts  catalog.ts  installed.ts  types.ts
src/routes/: +layout.svelte  +page.svelte
