[package]
name = "beacon"
version = "0.1.0"
description = "Beacon — pilote ton serveur Linux (VPS ou local) sans terminal"
authors = ["Benjam1Lct"]
edition = "2021"
license = "BUSL-1.1"
repository = "https://github.com/Benjam1Lct/Beacon"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "beacon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

